Fix wrapping and padding of SEC blob
p

--- a/src/views/annual-report/2021/annual-report.scss
+++ b/src/views/annual-report/2021/annual-report.scss
@@ -1013,6 +1013,7 @@ img.comment-viz{
                 justify-content: center;
                 align-items: center;
                 text-align: center;
+                margin-left: 4px;
             }
 
             .three-pillars {
@@ -1029,7 +1030,7 @@ img.comment-viz{
         @media #{$big} {
             .three-pillars {
                 .pillar-splash {
-                    width: 244px;
+                    width: 228px;
                     height: 160px;
                 }
             }
@@ -1048,7 +1049,7 @@ img.comment-viz{
 
             .three-pillars {
                 .pillar-splash {
-                    width: 198px;
+                    width: 188px;
                     height: 128px;
                 }
             }
@@ -1070,13 +1071,13 @@ img.comment-viz{
 
 
             h4 {
-                font-size: 1.1rem;
+                font-size: 1rem;
                 line-height: 1.3;
             }
 
             .three-pillars {
                 .pillar-splash {
-                    width: 151px;
+                    width: 142px;
                     height: 89px;
 
                     &.community {
@@ -1098,9 +1099,10 @@ img.comment-viz{
 
             .three-pillars {
                 .pillar-splash {
-                    width: 95px;
+                    width: 92px;
                     height: 64px;
                     margin-bottom: 0px;
+                    margin-left: 2px;
 
                     &.community {
                         width: 108px;
